syntax = "proto3";
package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/v2/x/evm/types";

message DeployNewSmartContractProposal {
  string title = 1;
  string description = 2;

  string abiJSON = 3;
  string bytecodeHex = 4;
}
